# SpecGuard

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ai_hdl_pipeline_demo.executed.ipynb  ai_hdl_pipeline_demo.ipynb  pyproject.toml
.claude/commands/: sg-assess.md  sg-comply.md  sg-extract.md  sg-graph.md  sg-import.md  sg-refine.md
.github/workflows/: ci.yml  experiments.yml
demo_pipeline/: __init__.py  llm_clients.py  pipeline.py
demo_pipeline/demo_pipeline/: __init__.py
docs/: architecture.md  improvement_plan.md  neo4j_guide.md  novelty_deepening.md  session_walkthrough.md  taxonomy.md
examples/: sample_requirements.txt  walkthrough_requirements.txt
experiments/: edge_extraction_eval.py  independent_lexicon.py  run_full_analysis.py  seeded_faults.py  seeded_faults_independent.py
experiments/data/: blind_mutations.json
formal_watchdog/: top.sv  watchdog.sby
formal_watchdog/watchdog/: FAIL  logfile.txt  status.sqlite  watchdog.xml
notebooks/: 01_specguard_demo.ipynb  02_llm_scenarios_demo.ipynb
results/: compliance_neo4j_run.json  cross_domain_run.json  demo_queries.cypher  edge_extraction_eval.json  experiment_results.json  full_analysis_with_linguistic.json  hmas_demo_run.json  seeded_faults_independent.json  specguard_graph.cypher
scripts/: compliance_demo.py  coverage_map.py  hmas_demo.py  load_neo4j.py  load_uav_cross_domain.py
src/specguard/: cli.py  (+1 more)
taxonomy/: checkability_taxonomy.csv
tests/: conftest.py  test_cli.py  test_compliance_engine.py  test_extraction.py  test_hmas.py  test_independent_lexicon.py  test_linguistic_metrics.py  test_llm_provider.py  test_neo4j_integration.py  test_neo4j_io.py  test_neo4j_uav_cross_domain.py  test_parsers.py  test_pipeline.py  test_quality_scorer.py  test_smell_detector.py  test_taxonomy.py  test_uav_cross_domain.py
(+56 files in other folders)
